# pantry-cooking-vibes-hungryroot

./: .editorconfig  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml  codeql.yml
src/pantry_cooking_vibes_hungryroot/: __init__.py  _adapter.py  _nutrition.py  _utils.py  import_legacy.py  plugin.py  scraper.py  transform.py
tests/: conftest.py  test_scraper.py  test_transform.py
