[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pantry-cooking-vibes-hungryroot"
version = "0.1.0"
description = "Hungryroot recipe scraper + post-process plugin for pantry-cooking-vibes core"
requires-python = ">=3.11"
dependencies = [
    "pantry-cooking-vibes",
    "requests>=2.31",
    "beautifulsoup4>=4.12",
]

[project.entry-points."pantry_cooking_vibes.importers"]
hungryroot = "pantry_cooking_vibes_hungryroot.plugin:HungryrootImporter"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pantry_cooking_vibes_hungryroot"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]
